--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "jquery": "^3.7.1",
